# tla-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  SYNTAX_STATUS.md  USER_GUIDE_TO_PRACTICAL_TLA.md
.github/workflows/: ci.yml  publish.yml
benches/: model_checking.rs
docs/: interactive-mode.md  interactive_tool_improvements.md  model_checking_patterns.md  sync_routing_report.md
examples/: EquipmentManager.md  EquipmentManager.tla  README.md  c3po_asteroid_field.tla  coffee_debug.tla  coffee_record.tla  coffee_simple.tla  counter.tla  counter_bug.tla  mutex.tla  mutex_bug.tla  test_def.tla  test_order.tla  traffic_light.tla
src/: ast.rs  checker.rs  config.rs  diagnostic.rs  eval.rs  export.rs  graph.rs  lexer.rs  lib.rs  liveness.rs  main.rs  modules.rs  parser.rs  scc.rs  scenario.rs  source.rs  span.rs  stdlib.rs  substitution.rs  symmetry.rs  wasm.rs
src/eval/: ast_utils.rs  candidates.rs  combinatorics.rs  context.rs  core.rs  diagnostics.rs  enumerate.rs  error.rs  global_state.rs  helpers.rs  init.rs  mod.rs  recursive.rs  state.rs
src/interactive/: input.rs  mod.rs  render.rs  repl.rs  serialize.rs  state.rs
src/parser/: error.rs  expr.rs  lexing.rs  mod.rs  primary.rs  spec.rs
test_cases/: counter_with_guards.tla  sync_initial_state.tla  sync_initial_state_buggy.tla  sync_leads_to.tla  sync_liveness.tla  sync_no_fairness.tla  sync_pending_cleared.tla  sync_reconnect.tla  sync_reconnect_clear.tla  sync_routing.tla  sync_routing2.tla  sync_routing_fixed.tla  sync_simple.tla  sync_strong_fairness.tla  sync_with_fairness.tla  test_exists_bug.tla
test_cases/benchmark/: enabled_bench.tla  inline_channels.tla  large_counter.tla  symmetric_procs.tla
test_cases/biochem/: Glycolysis.tla  GlycolysisBug_NoATPCheck.tla  diary.md  glycolysis_small.dot
test_cases/mqdb/: DIARY.md  FEEDBACK.md  GENERATED_TEST_CASES.md  MQDBAsyncReplication.tla  MQDBCluster.tla  MQDBConstraints.tla  MQDBConsumerGroup.tla  MQDBCore.tla  MQDBDelivery.tla  MQDBIdempotency.tla  MQDBOutbox.tla  MQDBOutboxBugNoAtomicity.tla  MQDBOutboxFixed.tla  MQDBOutboxNoFailure.tla  MQDBOwnership.tla  MQDBOwnershipTOCTOU.tla  MQDBQuorum.tla
test_cases/official/: DieHard.tla  HourClock.tla  Paxos.tla  Prisoners.tla  Queens.tla  Reachability.tla  SimpleAllocator.tla  TwoPhase.cfg  Voting.tla
test_cases/should_error/: deadlock.tla  init_error.tla  invariant_error.tla  next_error.tla  no_init.tla  no_initial_states.tla  no_next.tla
test_cases/should_pass/: MChannel.tla  SimpleChannel.tla  assume_constraint.tla  bags_operators.tla  bits_module.tla  bitwise_and.tla  boolean_set.tla  case_next.tla  complex_next.tla  counter.tla  counter_with_max.tla  enabled_operator.tla  eventually_test.tla  exponentiation.tla  extends_naturals.tla  fairness_test.tla  if_then_else_next.tla  infinitely_often.tla  is_finite_set.tla  lambda.tla  lazy_subset.tla  leads_to_test.tla  let_in_next.tla  liveness_test.tla  multi_fairness.tla  or_inside_conjunction_list.tla  parameterized_instance.tla  pingpong.tla  proper_subset.tla  recursive_factorial.tla  tlc_operators.tla  traffic_light.tla  transitive_closure.tla  two_bit.tla  unicode_operators.tla
test_cases/should_violate/: fairness_violation.tla  leads_to_violation.tla  (+3 more)
tests/: oracle.rs
(+15 files in other folders)
