[package]
name = "tlc-executor"
version = "0.1.0"
edition = "2024"

[lib]
name = "tlc_executor"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tlc-executor"
path = "src/main.rs"

[features]
default = []
wasm = ["wasm-bindgen", "serde"]
profiling = []
dhat = ["dep:dhat"]

[profile.release]
debug = true

[profile.profiling]
inherits = "release"
debug = 2
lto = false
codegen-units = 1
split-debuginfo = "packed"

[dependencies]
fastrand = "2.3.0"
indexmap = "2.13.0"
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"
dhat = { version = "0.3.3", optional = true }
ratatui = "0.30.0"
crossterm = "0.29.0"
stacker = "0.1.22"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "model_checking"
harness = false
