[package]
name = "tla-checker"
version = "0.3.0"
edition = "2024"
description = "A TLA+ model checker written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fabracht/tla-rs"
keywords = ["tla", "model-checking", "formal-verification"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "tla_checker"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tla"
path = "src/main.rs"

[features]
default = []
wasm = ["wasm-bindgen", "serde"]
profiling = []
dhat = ["dep:dhat"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
panic = "unwind"
strip = false

[profile.profiling]
inherits = "release"
debug = 2
lto = false
codegen-units = 1
split-debuginfo = "packed"

[dependencies]
fastrand = "2.3.0"
indexmap = "2.13.0"
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"
dhat = { version = "0.3.3", optional = true }
stacker = "0.1.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "model_checking"
harness = false
